Fix vertical overflow

--- a/dashboard/src/components/LoginForm/LoginForm.scss
+++ b/dashboard/src/components/LoginForm/LoginForm.scss
@@ -33,3 +33,7 @@
 #login-submit-button {
   display: block;
 }
+
+div .login-wrapper .login {
+  min-height: 100%;
+}
